--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.8",
         "milon/barcode": "^10.0",
         "nullpunkt/lz-string-php": "^1.3",
+        "riskihajar/terbilang": "*",
         "yajra/laravel-datatables": "^10.0"
     },
     "require-dev": {
