--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,10 @@ Homestead.yaml
 auth.json
 npm-debug.log
 composer.lock
-composer.lock
+kyc/composer.lock
+kyc/satusehat.ini
 yarn-error.log
 /.fleet
 /.idea
 /.vscode
+node_modules
