--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "milon/barcode": "^10.0",
         "nullpunkt/lz-string-php": "^1.3",
         "riskihajar/terbilang": "*",
+        "staudenmeir/eloquent-has-many-deep": "^1.7",
         "yajra/laravel-datatables": "^10.0"
     },
     "require-dev": {
