--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,15 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+#==================================PCARE_CONFIG=================================#
+PCARE_BASE_URL=
+PCARE_APP_CODE=
+PCARE_CONS_ID=
+PCARE_USER_KEY=
+PCARE_SECRET_KEY=
+#==================================ICARE_CONFIG=================================#
+ICARE_BASE_URL=
+
+
+
