disable clockwork on .env

--- a/.env.example
+++ b/.env.example
@@ -68,5 +68,4 @@ PCARE_SECRET_KEY=
 #==================================ICARE_CONFIG=================================#
 ICARE_BASE_URL=
 
-
-
+CLOCKWORK_ENABLE=false
